2006-06-22  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/utils.c: Reorganised C include file items, added C++ headers.
 * src/callbacks.c: Insert include statements and comment templates at
                    mouse pointer position instead of cursor position.


2006-06-21  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c: Added missing shortcut for "Close".
 * geany.glade, src/interface.c, src/prefs.c, src/keyfile.c,
   src/document.c, src/dialogs.c, src/encodings.h:
   Added option in the preferences dialog to replace tabs by spaces
   when saving a file.
   Added option for default encoding for new files.
 * scintilla/*: Updated Scintilla to version 1.70.


2006-06-20  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/utils.h, src/callbacks.c, src/document.c,
   src/document.h: Go back to the same line when reloading.
                   Fix start selection bug when clicking in the
                   current file if it has changed.
 * src/msgwindow.c, src/document.c:
   Also show status messages on the status bar.


2006-06-19  Enrico Troeger  <enrico.troeger@uvena.de>

  * THANKS, src/about.c: Added translator credits.
  * src/callbacks.c, src/encodings.c, src/utils.c, src/document.c,
    geany.glade, src/interface.c:
    Implemented encoding support to switch between different encodings.


2006-06-19  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in: Added Spanish translation. More info at
                 po/ChangeLog.


2006-06-19  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/utils.c, src/utils.h, src/callbacks.c:
   Don't open files or go to errors automatically whilst compiling.
   Rename utils_goto_workspace_tag to utils_goto_file_line.


2006-06-18  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c: Fixed a segfault when pressing shortcut for
                      "Find Usage" and there is no open file.
 * src/dialogs.c: Removed unneeded label padding.

